--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "'song1.txt'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        " 'you']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +285,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'false': 1, 'just': 2, 'are': 9, 'to': 6, 'people': 1, 'movei': 1, 'reasoni': 2, 'hate': 1, 'out': 2, 'or': 1, 'runnin': 1, 'did': 1, 'losin': 1, 'how': 1, 'congratulationsi': 1, 'that': 8, 'feel': 3, 'your': 5, 'feellike': 1, 'find': 1, 'even': 2, 'wouldnt': 1, 'game': 1, 'can': 1, 'youre': 1, 'life': 2, 'entitledlook': 1, 'realest': 1, 'lets': 3, 'crazy': 1, 'of': 1, 'aint': 4, 'you': 20, 'what': 1, 'bring': 4, 'talk': 3, 'meconfrontation': 1, 'truth': 1, 'hoped': 3, 'might': 6, 'knowall': 6, 'nothin': 1, 'winninon': 1, 'do': 7, 'dreams': 6, 'i': 3, 'about': 3, 'want': 2, 'reboundgot': 1, 'the': 38, 'credit': 1, 'youthis': 6, 'covered': 1, 'may': 6, 'egoget': 1, 'shitlove': 1, 'anything': 3, 'sword': 1, 'it': 7, 'down': 1, 'night': 6, 'endorsinmotherfucker': 1, 'stay': 1, 'a': 6, 'in': 2, 'get': 1, 'promises': 1, 'involved': 1, 'momma': 1, 'hoursand': 1, 'withi': 1, 'my': 7, 'buildin': 1, 'end': 1, 'all': 16, 'kinda': 1, 'reasongot': 1, 'wont': 1, 'stars': 18, 'who': 2, 'expectationsi': 1, 'meif': 1, 'gon': 1, 'nobody': 1, 'small': 1, 'love': 1, 'badbetter': 1, 'days': 1, 'closertell': 1, 'cryin': 1, 'be': 6, 'calculated': 1, 'importantyou': 1, 'new': 1, 'for': 4, 'if': 2, 'thanks': 1, 'mefuck': 1, 'invite': 1, 'talkin': 1, 'thats': 1, 'closer': 7, 'from': 1, 'bullet': 1, 'morguebut': 1, 'doyou': 1, 'ever': 1, 'ya': 1, 'confidenceand': 1, 'dealin': 1, 'me': 10, 'everything': 3, 'dont': 2, 'live': 1, 'tryna': 1, 'recognize': 1, 'and': 4, 'meyou': 1, 'heart': 1, 'cause': 2, 'approach': 9, 'got': 1, 'foror': 3, 'witha': 1, 'conversationi': 1, 'youi': 3, 'im': 3, 'loved': 1, 'loveis': 3, 'moral': 1, 'feeling': 7, 'like': 5, 'away': 1, 'youoh': 1, 'at': 2, 'another': 2, 'mans': 1, 'closerskin': 1, 'prayin': 1, 'percentage': 1, 'making': 1, 'give': 1, 'cant': 1, 'let': 6, 'its': 1, 'story': 1, 'no': 4, 'know': 3, 'way': 2, 'haunt': 6, 'with': 1, 'breathini': 1, 'giftthats': 1, 'were': 1, 'youcorrupt': 1, 'goodi': 1, 'timelove': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "def count_vectorize(song, vocab=None):\n",
-    "    pass\n",
+    "    if vocab:\n",
+    "        unique_words = vocab\n",
+    "    else:\n",
+    "        unique_words = list(set(song))\n",
+    "    song_dict = {i:0 for i in unique_words}\n",
+    "    for word in song:\n",
+    "        song_dict[word] += 1\n",
+    "    return song_dict\n",
     "\n",
-    "test_vectorized = None\n",
+    "test_vectorized = count_vectorize(tokenized_test_song)\n",
     "print(test_vectorized)"
    ]
   },
@@ -316,14 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['runnin', 'did', 'losin', 'how', 'congratulationsi', 'that', 'feel', 'your', 'feellike', 'find']\n"
+     ]
+    }
+   ],
    "source": [
     "def term_frequency(BoW_dict):\n",
-    "    pass\n",
+    "    total_word_count = sum(BoW_dict.values())\n",
+    "    for ind, val in BoW_dict.items():\n",
+    "        BoW_dict[ind] = val/ total_word_count\n",
+    "    return BoW_dict\n",
     "\n",
-    "test = None\n",
+    "test = term_frequency(test_vectorized)\n",
     "print(list(test)[10:20])"
    ]
   },
@@ -341,12 +367,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def inverse_document_frequency(list_of_dicts):\n",
-    "    pass"
+    "    vocab_set = set()\n",
+    "    # Iterate through list of dfs and add index to vocab_set\n",
+    "    for d in list_of_dicts:\n",
+    "        for word in d.keys():\n",
+    "            vocab_set.add(word)\n",
+    "    \n",
+    "    # Once vocab set is complete, create an empty dictionary with a key for each word and value of 0.\n",
+    "    full_vocab_dict = {i:0 for i in vocab_set}\n",
+    "    \n",
+    "    # Loop through each word in full_vocab_dict\n",
+    "    for word, val in full_vocab_dict.items():\n",
+    "        docs = 0\n",
+    "        \n",
+    "        # Loop through list of dicts.  Each time a dictionary contains the word, increment docs by 1\n",
+    "        for d in list_of_dicts:\n",
+    "            if word in d:\n",
+    "                docs += 1\n",
+    "        \n",
+    "        # Now that we know denominator for equation, compute and set IDF value for word\n",
+    "        \n",
+    "        full_vocab_dict[word] = np.log((len(list_of_dicts)/ float(docs)))\n",
+    "    \n",
+    "    return full_vocab_dict"
    ]
   },
   {
@@ -364,12 +412,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tf_idf(list_of_dicts):\n",
-    "    pass"
+    "    # Create empty dictionary containing full vocabulary of entire corpus\n",
+    "    doc_tf_idf = {}\n",
+    "    idf = inverse_document_frequency(list_of_dicts)\n",
+    "    full_vocab_list = {i:0 for i in list(idf.keys())}\n",
+    "    \n",
+    "    # Create tf-idf list of dictionaries, containing a dictionary that will be updated for each document\n",
+    "    tf_idf_list_of_dicts = []\n",
+    "    \n",
+    "    # Now, compute tf and then use this to compute and set tf-idf values for each document\n",
+    "    for doc in list_of_dicts:\n",
+    "        doc_tf = term_frequency(doc)\n",
+    "        for word in doc_tf:\n",
+    "            doc_tf_idf[word] = doc_tf[word] * idf[word]\n",
+    "        tf_idf_list_of_dicts.append(doc_tf_idf)\n",
+    "    \n",
+    "    return tf_idf_list_of_dicts"
    ]
   },
   {
@@ -392,14 +455,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['through', 'song', 'team', 'gift', 'to', 'call', 'heard', 'ride', 'made', 'runneth']\n"
+     ]
+    }
+   ],
    "source": [
     "def main(filenames):\n",
-    "    pass\n",
+    "    # Iterate through list of filenames and read each in\n",
+    "    count_vectorized_all_documents = []\n",
+    "    for file in filenames:\n",
+    "        with open('data/' + file) as f:\n",
+    "            raw_data = f.readlines()\n",
+    "        # Clean and tokenize raw text\n",
+    "        cleaned = clean_song(raw_data)\n",
+    "        tokenized = tokenize(cleaned)\n",
+    "        \n",
+    "        # Get count vectorized representation and store in count_vectorized_all_documents  \n",
+    "        count_vectorized_document = count_vectorize(tokenized)\n",
+    "        count_vectorized_all_documents.append(count_vectorized_document)\n",
+    "    \n",
+    "    # Now that we have a list of BoW respresentations of each song, create a tf-idf representation of everything\n",
+    "    tf_idf_all_docs = tf_idf(count_vectorized_all_documents)\n",
+    "    \n",
+    "    return tf_idf_all_docs\n",
     "\n",
-    "tf_idf_all_docs = None\n",
+    "tf_idf_all_docs = main(filenames)\n",
     "print(list(tf_idf_all_docs[0])[:10])"
    ]
   },
@@ -418,9 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Dimensions: 1629\n"
+     ]
+    }
+   ],
    "source": [
     "num_dims = len(tf_idf_all_docs[0])\n",
     "print(\"Number of Dimensions: {}\".format(num_dims))"
